force-app/main/default/objects/Airline_API__mdt/Airline_API__mdt.object-meta.xml
<CustomObject>
    <description>Used for Airline API of Indigo, Spice-Jet, Go and Air Asia credentials.</description>
    <label>Airline API</label>
    <pluralLabel>Airline APIs</pluralLabel>
</CustomObject>