force-app/main/default/objects/Airline_API__mdt/fields/AirLine_Code__c.field-meta.xml
<CustomField>
    <fullName>AirLine_Code__c</fullName>
    <label>AirLine Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>