force-app/main/default/objects/Airline_API__mdt/fields/AppID__c.field-meta.xml
<CustomField>
    <fullName>AppID__c</fullName>
    <label>AppID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>