force-app/main/default/objects/Airline_API__mdt/fields/AWB_Prefix__c.field-meta.xml
<CustomField>
    <fullName>AWB_Prefix__c</fullName>
    <label>AWB Prefix</label>
    <length>100</length>
    <type>Text</type>
</CustomField>