force-app/main/default/objects/Airline_API__mdt/fields/ClientUID__c.field-meta.xml
<CustomField>
    <fullName>ClientUID__c</fullName>
    <label>ClientUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>