force-app/main/default/objects/Airline_API__mdt/fields/Device_ID__c.field-meta.xml
<CustomField>
    <fullName>Device_ID__c</fullName>
    <label>Device ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>