force-app/main/default/objects/Airline_API__mdt/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>