force-app/main/default/objects/Airline_API__mdt/fields/Endpoint_String__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_String__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>