force-app/main/default/objects/Airline_API__mdt/fields/isSwagger__c.field-meta.xml
<CustomField>
    <fullName>isSwagger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSwagger</label>
    <type>Checkbox</type>
</CustomField>