force-app/main/default/objects/Airline_API__mdt/fields/LoginName__c.field-meta.xml
<CustomField>
    <fullName>LoginName__c</fullName>
    <label>LoginName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>