force-app/main/default/objects/Airline_API__mdt/fields/Station__c.field-meta.xml
<CustomField>
    <fullName>Station__c</fullName>
    <label>Station</label>
    <length>50</length>
    <type>Text</type>
</CustomField>