force-app/main/default/objects/Airline_API__mdt/listViews/Air_Asia.listView-meta.xml
<ListView>
    <fullName>Air_Asia</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>Air Asia</value>
    </filters>
    <label>Air Asia</label>
</ListView>