force-app/main/default/objects/Airline_API__mdt/listViews/Go_Air.listView-meta.xml
<ListView>
    <fullName>Go_Air</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>Go Air</value>
    </filters>
    <label>Go Air</label>
</ListView>