force-app/main/default/objects/Airline_API__mdt/listViews/Indigo_Airline.listView-meta.xml
<ListView>
    <fullName>Indigo_Airline</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>Indigo</value>
    </filters>
    <label>Indigo Airline</label>
</ListView>