force-app/main/default/objects/Airline_API__mdt/listViews/Spice_Jet.listView-meta.xml
<ListView>
    <fullName>Spice_Jet</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>contains</operation>
        <value>Spice-Jet</value>
    </filters>
    <label>Spice-Jet Airline</label>
</ListView>